@@ -1,6 +1,7 @@
 Version 3.3.1-devel
 -------------------
 - Fix unaligned loads in binary_decoder and pointer_decoder.
+- Make UndefinedBehaviourSanitizer happy in compressor_save.cpp.
 
 
 Version 3.3.0 [24 Aug 2017]
